--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <h1>Car Fuel Efficiency in 2017</h1>
         <h2>Mohini Purandare CS416 Narrative Visualization Project 07/28/2024</h2>
 
-        <p>This narrative visualization provides details on car fuel efficiency for various car makers in 2017. Various factors that influence a car's fuel efficiency are examined. The aim to provide insight into what kind of cars provide the best mileage.</p>
-
-        <h5>Click the button below to get started.</h5>
+        <p>This Martini Glass Visualization compares the fuel efficiency in miles per gallon (MPG) for Electric and Gasoline cars for various car makers in 2017. Various factors that influence a car's fuel efficiency are examined like whether the vehicle is driven in the city or on the highway. The aim to provide insight into what kind of cars provide the best mileage.</p>
+        <p>At the end of the visualization, you can explore the details more by interacting with the graphs.</p>
+        <h2>Click the button below to get started.</h2>
 
         <button class="button" onclick="window.location.href='scene1.html'">Get Started</button>
     </body>
