--- a/scene3.html
+++ b/scene3.html
@@ -10,7 +10,9 @@
 
 <body>
     <h1>Explore More</h1>
-    <p>Scene 3 Content</p>
+    <p>In this last scene, you can explore the 2 charts further to dive deeper into the average MPG offered by different car brands and electric and gasoline engine types.</p>
+    <p>The "Electric" and "Gasoline" buttons let you navigate between the two charts. You can also hover over any of the bars in the charts to see a tooltip on the exact fuel efficiency value it is displaying.</p>
+    <p>If you wish to start from the beginning, click on the "Restart Visualization" button.</p>
 
     <button class="button" id="electricButton">Electric</button>
     <button class="button" id="gasButton">Gasoline</button>
